# Roslyn-Stone

./: .dockerignore  .gitignore  ASPIRE_INTEGRATION.md  DOCKER.md  DYNAMIC_COMPILATION_BEST_PRACTICES.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION.md  MCP_ARCHITECTURE.md  PR_SUMMARY.md  README.md  RoslynStone.sln  TESTING_IMPROVEMENTS.md  add-packages.sh  build.cake  create-solution.sh  docker-compose.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  postCreate.sh  test-dind.sh
.github/: COPILOT_ENVIRONMENT.md  MCP_CONFIGURATION.md  README.md  SETUP_SUMMARY.md  copilot-instructions.md  dependabot.yml
.github/actions/setup-dotnet-tools/: action.yml
.github/agents/: CSharpExpert.agent.md  DocumentationExpert.agent.md  McpIntegrationExpert.agent.md  README.md  RoslynExpert.agent.md  SecurityExpert.agent.md  TestingExpert.agent.md
.github/instructions/: csharp-mcp-server.instructions.md  mcp.instructions.md  repl.instructions.md  testing.instructions.md
.github/workflows/: build.yml  ci.yml  container.yml  copilot-setup-steps.yml  release-nuget.yml
scripts/: check-python-quality.sh  format-python.sh
src/RoslynStone.Api/: Dockerfile  Program.cs  RoslynStone.Api.csproj  RoslynStone.Api.http  entrypoint.sh
src/RoslynStone.Api/Controllers/: DocumentationController.cs  McpController.cs  ReplController.cs
src/RoslynStone.Api/Properties/: launchSettings.json
src/RoslynStone.Api/Python/: gradio_launcher.py
src/RoslynStone.AppHost/: AppHost.cs  RoslynStone.AppHost.csproj
src/RoslynStone.AppHost/Properties/: launchSettings.json
src/RoslynStone.Core/: RoslynStone.Core.csproj
src/RoslynStone.Core/CQRS/: ICommand.cs  ICommandHandler.cs  IQuery.cs  IQueryHandler.cs
src/RoslynStone.Core/Commands/: ExecuteCodeCommand.cs  ExecuteFileCommand.cs  LoadPackageCommand.cs
src/RoslynStone.Core/MCP/: McpProtocol.cs  McpTool.cs
src/RoslynStone.Core/Models/: DocumentationInfo.cs  ExecutionResult.cs  NuGetPackageSpec.cs  PackageMetadata.cs  PackageReference.cs  PackageSearchResult.cs  PackageVersion.cs
src/RoslynStone.Core/Queries/: GetDocumentationQuery.cs  GetPackageReadmeQuery.cs  GetPackageVersionsQuery.cs  SearchPackagesQuery.cs  ValidateCodeQuery.cs
src/RoslynStone.GradioModule/: RoslynStone.GradioModule.csproj  gradio_app.py  gradio_launcher.py  pyproject.toml  requirements.txt
src/RoslynStone.GradioModule/components/: __init__.py  mcp_client.py
src/RoslynStone.GradioModule/tabs/: __init__.py  chat.py  prompts.py  resources.py  setup.py  tools.py
src/RoslynStone.GradioModule/theme/: __init__.py  cyberpunk.py
src/RoslynStone.GradioModule/utils/: __init__.py  formatting.py  llm_providers.py  mcp_endpoint.py
src/RoslynStone.Infrastructure/: RoslynStone.Infrastructure.csproj
src/RoslynStone.Infrastructure/CommandHandlers/: ExecuteCodeCommandHandler.cs  ExecuteFileCommandHandler.cs  LoadPackageCommandHandler.cs
src/RoslynStone.Infrastructure/Functional/: DiagnosticHelpers.cs
src/RoslynStone.Infrastructure/Helpers/: ContextIdMasker.cs  MetadataReferenceHelper.cs  ResourceMonitor.cs
src/RoslynStone.Infrastructure/Models/: ResourceResponses.cs  SecurityConfiguration.cs
src/RoslynStone.Infrastructure/QueryHandlers/: GetDocumentationQueryHandler.cs  GetPackageReadmeQueryHandler.cs  GetPackageVersionsQueryHandler.cs  (+2 more)
src/RoslynStone.ServiceDefaults/: Extensions.cs  RoslynStone.ServiceDefaults.csproj
tests/RoslynStone.AppHost.Tests/: AppHostTests.cs  RoslynStone.AppHost.Tests.csproj
tests/RoslynStone.Benchmarks/: CompilationServiceBenchmarks.cs  DocumentationServiceBenchmarks.cs  ExecutionContextManagerBenchmarks.cs  NuGetServiceBenchmarks.cs  Program.cs  README.md  RoslynScriptingServiceBenchmarks.cs  RoslynStone.Benchmarks.csproj  SessionIsolatedExecutionServiceBenchmarks.cs
tests/RoslynStone.GradioTests/: GradioLandingPagePlaywrightTests.cs  GradioLandingPageTests.cs  McpServerCollection.cs  McpServerFixture.cs  PlaywrightCollection.cs  PlaywrightFixture.cs  README.md  RoslynStone.GradioTests.csproj
tests/RoslynStone.LoadTests/: Program.cs  README.md  RoslynStone.LoadTests.csproj
tests/RoslynStone.Tests/: AssemblyExecutionServiceTests.cs  CompilationServiceEdgeCasesTests.cs  CompilationServiceTests.cs  CriticalBugsTests.cs  DiagnosticHelpersTests.cs  DiagnosticPackageTest.cs  DocumentationServiceNuGetIntegrationTests.cs  DocumentationServiceTests.cs  ExecuteCodeCommandHandlerTests.cs  ExecutionContextManagerTests.cs  FileBasedProgramScriptingTests.cs  FileBasedProgramTests.cs  FileBasedToolsExecutionTests.cs  FileBasedToolsTestHelpers.cs  GuidancePromptsTests.cs  LoadNuGetPackageTests.cs  LoadPackageCommandHandlerTests.cs  McpServerConfigurationTests.cs  McpToolsIntegrationTests.cs  NuGetQueryHandlerTests.cs  NuGetServiceTests.cs  ReplContextManagerTests.cs  ReplToolsContextControlTests.cs  ResourceEquivalentToolsTests.cs  ResourceTests.cs  RoslynScriptingServiceTests.cs  RoslynStone.Tests.csproj  SecurityIsolationTests.cs  SecurityTests.cs
(+24 files in other folders)
