[project]
name = "roslyn-stone-gradio"
version = "0.2.0"
description = "Interactive Gradio UI for Roslyn-Stone MCP Server testing"
requires-python = ">=3.9"
dependencies = [
    "gradio>=5.0.0,<6.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
